--- a/src/layouts/list-layout.module.css
+++ b/src/layouts/list-layout.module.css
@@ -48,6 +48,7 @@
   height: calc(100% - 1rem);
   border: 1px solid var(--nord-1);
   border-radius: var(--rounded);
+  overflow-x: hidden;
 }
 
 .sidebar {
